--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --stroke-color: rgba(255, 255, 255, 0.50);
     --surface-color: rgba(255, 255, 255, 0.10);
     --surface-color-hover:rgb(255, 255, 255, 0.05);
-    --social-link-hover:rgba(255, 255, 255, 0.20);
+    --highlight-color:rgba(255, 255, 255, 0.20);
     --switch-bg-url:url('assets/moon-stars.svg')
 }
 
@@ -22,7 +22,7 @@
     --stroke-color: rgba(0, 0, 0, 0.50);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover:rgba(0, 0, 0, 0.02);
-    --social-link-hover:rgba(0, 0, 0, 0.10);
+    --highlight-color:rgba(0, 0, 0, 0.10);
     --switch-bg-url:url('assets/sun.svg')
 }
 
@@ -80,11 +80,16 @@ body * {
     left: 0;
     transform: translateY(-50%);
     top: 50%;
+
+    animation: slide-back 0.2s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-forward 0.2s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -146,11 +151,43 @@ font-size: 24px;
 }
 
 #social-links a:hover {
-    background-color: var(--social-link-hover);
+    background-color: var(--highlight-color);
 }
 
 footer{
     padding: 24px 0;
     text-align: center;
     font-size: 14px;
+}
+
+/* media */
+
+@media (min-width:700px){
+    :root{
+        --bg-url: url('assets/bg-desktop.jpg');
+    }
+
+    .light {
+        --bg-url: url('assets/bg-desktop-light.jpg');
+    }
+}
+
+/* Animation*/
+
+@keyframes slide-forward{
+    from {
+        left:0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back{
+    from{
+        left:50%;
+    }
+    to {
+        left:0;
+    }
 }
